[tool.poetry]
name = "example"
version = "1.0.0"
description = ""
authors = ["Nikolay <ceo@machineand.me>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.0"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
pytest-docker-compose = "^3.2.0"
alembic = "^1.4.3"
gino = {extras = ["starlette"], version = "^1.0.1"}
pydantic = "^1.6.1"
cachetools = "^4.1.1"
gino-starlette = "^0.1.1"
psycopg2-binary = "^2.8.6"
orjson = "^3.4.0"
pytest-asyncio = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-bdd = "^4.0.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
